# phantom-types

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  docs-requirements.txt  goose.yaml  mypy.ini  pyproject.toml  requirements.in  requirements.txt  ruff.toml  setup.cfg  typing-requirements.txt
.github/: CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  dependabot.yaml
.github/workflows/: ci.yaml  codeql-analysis.yml  docs.yaml  release.yaml
.goose/check-manifest/: manifest.json  requirements.txt
.goose/mypy/: manifest.json  requirements.txt
.goose/node/: manifest.json  package-lock.json  package.json
.goose/python/: manifest.json  requirements.txt
dep/: __init__.py  base.py  numeric.py  sized.py
dependent/: __init__.py  base.py  fixed_size_containers.py  open_ranges.py  range.py
dept/: __init__.py  base.py  datetime.py  numeric.py  re.py  sized.py
docs/: Makefile  conf.py  index.rst  pyproject.toml  requirements.in  requirements.txt
docs/pages/: bounds.rst  builtin-predicates.rst  builtin-types.rst  composing-types.rst  external-wrappers.rst  functional-composition.rst  getting-started.rst  implementation.rst  predicates.rst  pydantic-support.rst  types.rst
examples/dacite/: dacite_example.py  deserializing.py  requirements.txt  setup.cfg  test_dacite.py
examples/pydantic/: pydantic_example.py  requirements.in  requirements.txt  test_pydantic.py  test_pydantic.yaml
phantom/: __init__.py  base.py  boolean.py  datetime.py  fn.py  func.py  interval.py  iso3166.py  numeric.py  predicate.py  re.py  schema.py  sized.py  utils.py
phantom/ext/: iso3166.py  phonenumbers.py
phantom/predicates/: __init__.py  base.py  bool.py  boolean.py  collection.py  datetime.py  generic.py  interval.py  numeric.py  re.py  string.py
src/phantom/: __init__.py  _base.py  _hypothesis.py  base.py  boolean.py  bounds.py  datetime.py  errors.py  fn.py  interval.py  iso3166.py  negated.py  re.py  schema.py  sequence.py  sized.py  typing_compat.py  utils.py
src/phantom/_utils/: compat.py  misc.py  types.py
src/phantom/ext/: iso3166.py  phonenumbers.py
src/phantom/predicates/: __init__.py  _base.py  _utils.py  boolean.py  collection.py  generic.py  interval.py  numeric.py  re.py  utils.py
tests/: test_base.py  test_boolean.py  test_datetime.py  test_datetime.yaml  test_fixed_size_containers.py  test_fn.py  test_fn.yaml  test_intersection.yaml  test_interval.py  test_interval.yaml  test_iso3166.py  test_iso3166.yaml  test_negated.py  test_negated.yaml  test_numeric.py  test_numeric.yaml  test_open_ranges.py  test_predicate.py  test_re.py  test_re.yaml  test_sequence.py  test_sequence.yaml  test_singledispatch.py  test_sized.py  test_sized.yaml  test_utils.py  types.py
tests/ext/: test_hypothesis.py  test_iso3166.py  test_iso3166.yaml  test_phonenumbers.py  test_phonenumbers.yaml
tests/predicates/: __init__.py  test_bool.py  test_boolean.py  test_collection.py  test_datetime.py  test_generic.py  test_interval.py  test_numeric.py  test_re.py  test_utils.py  utils.py
tests/pydantic/: test_datetime.py  test_pydantic_schemas.py  test_schemas.py
