[metadata]
name = phantom-types
version = attr: phantom.__version__
description = Phantom types for Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT License
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
author = Anton Agestam
author_email = git@antonagestam.se
url = https://github.com/antonagestam/phantom-types/

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    typeguard>=2.10

[options.package_data]
phantom = py.typed

[options.extras_require]
phonenumbers =
    phonenumbers>=8.12.11
iso3166 =
    iso3166>=1.0.1
pydantic =
    pydantic>=1.8.1
test =
    mypy
    pytest
    pytest-mypy-plugins
    coverage

[flake8]
exclude = appveyor,.idea,.git,.venv,.tox,__pycache__,*.egg-info,build
max-complexity = 8
max-line-length = 88
# B008: It's ok to instantiate instances as defaults.
# E203: Black does the right thing, flake8 doesn't.
extend-ignore = E203 B008

[isort]
profile = black
src_paths = phantom, tests
force_single_line = True

[mypy]
python_version = 3.8
show_error_codes = True
pretty = True
files = .

ignore_missing_imports = False
no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_subclassing_any = True

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-tests.*]
disallow_untyped_defs = False
disallow_untyped_calls = False
disallow_any_expr = False
disallow_untyped_decorators = False

[mypy-typeguard]
ignore_errors = True

[mypy-setuptools,phonenumbers,iso3166]
ignore_missing_imports = True

[coverage:run]
source = phantom
branch = True

[coverage:report]
skip_covered = True
show_missing = True
exclude_lines =
  pragma: no cover
  # ignore non-implementations
  ^\s*\.\.\.
