[metadata]
name = phantom-types
version = attr: phantom.__version__
description = Phantom types for Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta
author = Anton Agestam
author_email = git@antonagestam.se
url = https://github.com/antonagestam/phantom-types/
project_urls =
    Source Repository = https://github.com/antonagestam/phantom-types/
    Documentation = https://phantom-types.readthedocs.io/en/stable/

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    typeguard>=2.10
    typing_extensions>=4.3.0
    numerary>=0.3.0,<0.4; python_version<'3.8'
    numerary>=0.4.0; python_version>='3.8'

[options.packages.find]
where = src

[options.package_data]
phantom = py.typed

[options.extras_require]
phonenumbers =
    phonenumbers>=8.12.41
pydantic =
    pydantic>=1.9.0
dateutil =
    python-dateutil>=2.8.2
test =
    mypy>=0.930
    pytest
    pytest-mypy-plugins>=1.9.3
    coverage

[flake8]
exclude = appveyor,.idea,.git,.venv,.tox,__pycache__,*.egg-info,build
max-complexity = 8
max-line-length = 88
# B008: It's ok to instantiate instances as defaults.
# E203: Black does the right thing, flake8 doesn't.
# B024: Abstract base classes should not be expected to introduce abstract methods.
extend-ignore = E203 B008 B024

[isort]
profile = black
src_paths = src, tests
force_single_line = True

[mypy]
python_version = 3.7
show_error_codes = True
pretty = True
files = src, tests

ignore_missing_imports = False
no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_subclassing_any = True

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-tests.*]
disallow_untyped_defs = False
disallow_untyped_calls = False
disallow_any_expr = False
disallow_untyped_decorators = False
disallow_incomplete_defs = False

[coverage:run]
source = src
branch = True

[coverage:report]
skip_covered = True
show_missing = True
exclude_lines =
    pragma: no cover
    # ignore non-implementations
    ^\s*\.\.\.
