[metadata]
name = phantom-types
version = attr: phantom.__version__
description = Phantom types for Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 5 - Production/Stable
author = Anton Agestam
author_email = git@antonagestam.se
url = https://github.com/antonagestam/phantom-types/
project_urls =
    Source Repository = https://github.com/antonagestam/phantom-types/
    Documentation = https://phantom-types.readthedocs.io/en/stable/

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    typeguard>=4
    typing_extensions>=4.3.0
    numerary>=0.4.3

[options.packages.find]
where = src

[options.package_data]
phantom = py.typed

[options.extras_require]
phonenumbers =
    phonenumbers>=8.12.41
pydantic =
    pydantic>=1.9.0
dateutil =
    python-dateutil>=2.8.2
hypothesis =
    hypothesis[zoneinfo]>=6.68.0
all =
    phantom-types[phonenumbers]
    phantom-types[pydantic]
    phantom-types[dateutil]
    phantom-types[hypothesis]
test =
    mypy>=0.991
    pytest
    pytest-mypy-plugins>=1.9.3
    coverage

[mypy]
python_version = 3.8
show_error_codes = True
pretty = True
files = src, tests

ignore_missing_imports = False
no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_subclassing_any = True

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-tests.*]
disallow_untyped_defs = False
disallow_untyped_calls = False
disallow_any_expr = False
disallow_untyped_decorators = False
disallow_incomplete_defs = False

[coverage:run]
source = src
branch = True

[coverage:report]
skip_covered = True
show_missing = True
exclude_lines =
    pragma: no cover
    # ignore non-implementations
    ^\s*\.\.\.
    ^\s*if TYPE_CHECKING:
